# PracticaProg-OriolBusoms

./: Bot.c  Bot.h  Bot.h.h  CMakeLists.txt  Crupier.c  Crupier.h  Misc.c  Misc.h  Partida.c  Partida.h  Player.c  Player.h  Ronda.c  Ronda.h  baralla.c  baralla.h  listaPDI.c  listaPDI.h  main.c  pila.c  pila.h
